--- a/study/mvc2/form/src/main/resources/templates/form/items.html
+++ b/study/mvc2/form/src/main/resources/templates/form/items.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
+    <div class="py-5 text-center"> <!-- py는 패딩 위아래, 5는 패킹 위아래 크기 -->
         <h2>상품 목록</h2>
     </div>
 
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <hr class="my-4">
+    <hr class="my-4"> <!-- 부트스트랩 수평선 -->
     <div>
         <table class="table">
             <thead>
