--- a/study/mvc2/form/src/main/resources/templates/form/item.html
+++ b/study/mvc2/form/src/main/resources/templates/form/item.html
@@ -40,6 +40,48 @@
 
     <hr class="my-4">
 
+    <!-- 단일 체크박스 -->
+    <!-- 여기서는 th:object를 사용하지 않았기에, th:field 부분에 *{open}이 아닌 ${item.open}을 해줘야 함-->
+    <div>판매 여부</div>
+    <div>
+        <div class="form-check">
+            <input type="checkbox" id="open" th:field="${item.open}" class="form-check-input" disabled>
+            <label for="open" class="form-check-label">판매 오픈</label>
+        </div>
+    </div>
+
+    <!-- 멀티 체크박스 -->
+    <div>
+        <div>등록 지역</div>
+        <div th:each="region : ${regions}" class="form-check form-check-inline">
+            <input type="checkbox" th:field="${item.regions}" th:value="${region.key}" class="form-check-input" disabled>
+            <label th:for="${#ids.prev('regions')}"
+                   th:text="${region.value}" class="form-check-label">서울</label>
+        </div>
+    </div>
+
+    <!-- 라디오 버튼 -->
+    <div>
+        <div>상품 종류</div>
+        <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+            <input type="radio" th:field="${item.itemType}" th:value="${type.name()}" class="form-check-input" disabled>
+            <label th:for="${#ids.prev('itemType')}"
+                   th:text="${type.name()}" class="form-check-label"></label>
+        </div>
+    </div>
+
+    <!-- select 박스 -->
+    <div>
+        <div>배송 방식</div>
+        <select th:field="${item.deliveryCode}" disabled>
+            <option value="">== 배송 방식 선택 == </option>
+
+            <option th:each="deliveryCode : ${deliveryCodes}"
+                    th:value="${deliveryCode.code}"
+                    th:text="${deliveryCode.displayName}"></option>
+        </select>
+    </div>
+
     <div class="row">
         <div class="col">
             <button class="w-100 btn btn-primary btn-lg"
@@ -54,6 +96,8 @@
                     type="button">목록으로</button>
         </div>
     </div>
+
+
 
 </div> <!-- /container -->
 </body>
