--- a/study/mvc2/validation/itemservice/src/main/resources/templates/validation/v3/addForm.html
+++ b/study/mvc2/validation/itemservice/src/main/resources/templates/validation/v3/addForm.html
@@ -40,7 +40,7 @@
             <div class="field-error" th:errors="*{itemName}">
                 상품명 오류
             </div>
-            <!--  th:errors로 ""BindingResult에서"" 설정한 에러메세지 (errorcode 바탕으로 생성된 메세지코드의 errors.properties 바탕..)가 보여지고,
+            <!--  th:errors로 ""BindingResult에서"" 설정한 에러메세지가 보여지고,
                   th:field는 정상 상태라면 모델 객체 값을, 에러가 발생했다면 FieldError에서 보관한 값으로 값 출력..
                   th:errorClass는 해당 th:field로 에러가 있다면 지정한 클래스(field-error)를, class에 추가..-->
         </div>
@@ -74,7 +74,7 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/validation/v2/items}'|"
+                        th:onclick="|location.href='@{/validation/v3/items}'|"
                         type="button" th:text="#{button.cancel}">취소</button>
             </div>
         </div>
