--- a/study/mvc2/validation/itemservice/src/main/resources/templates/validation/v4/items.html
+++ b/study/mvc2/validation/itemservice/src/main/resources/templates/validation/v4/items.html
@@ -15,7 +15,6 @@
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
-                    onclick="location.href='addForm.html'"
                     th:onclick="|location.href='@{/validation/v4/items/add}'|"
                     type="button" th:text="#{page.addItem}">상품 등록</button>
         </div>
@@ -34,7 +33,7 @@
             </thead>
             <tbody>
             <tr th:each="item : ${items}">
-                <td><a href="item.html" th:href="@{/validation/v4/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원id</a></td>
+                <td><a href="item.html" th:href="@{/validation/v4/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">상품id</a></td>
                 <td><a href="item.html" th:href="@{|/validation/v4/items/${item.id}|}" th:text="${item.itemName}">상품명</a></td>
                 <td th:text="${item.price}">10000</td>
                 <td th:text="${item.quantity}">10</td>
