0715_jpa실전2_api 개발 기본

--- a/study/mvc2/thymeleaf-basic/src/main/resources/templates/basic/javascript.html
+++ b/study/mvc2/thymeleaf-basic/src/main/resources/templates/basic/javascript.html
@@ -7,15 +7,15 @@
 <body>
     <!-- 자바스크립트 인라인 사용 전 -->
     <script>
-        // var username = "[[${user.username}]]"; --> 이렇게 해야 var username = "userA"; 로 에러 안남
-        var username = [[${user.username}]]; // var username = userA --> 에러 남.
+        var username = "[[${user.username}]]"; //--> 이렇게 해야 var username = "userA"; 로 에러 안남
+        //var username = [[${user.username}]]; // var username = userA --> 에러 남.
         var age = [[${user.age}]];
 
         //자바스크립트 내추럴 템플릿
         var username2 = /*[[${user.username}]]*/ "test username";
 
         //객체
-        var user = [[${user}]]; // user객체의 toString이 호출됨.
+       // var user = [[${user}]]; // user객체의 toString이 호출됨.
     </script>
 
     <!-- 자바스크립트 인라인 사용 후, 타임리프에서 자바스크립트 관련된 처리를 훨씬 편리하게! -->
