--- a/study/실전-JPA/jpashop/src/main/resources/templates/order/orderList.html
+++ b/study/실전-JPA/jpashop/src/main/resources/templates/order/orderList.html
@@ -47,6 +47,7 @@
                 <td th:text="${item.orderItems[0].count}"></td>
                 <td th:text="${item.status}"></td>
                 <td th:text="${item.orderDate}"></td>
+                <!-- ORDER 상태면, cancel 버튼이 로딩됨 !! (주문상태 아니면 로딩안됨)-->
                 <td>
                     <a th:if="${item.status.name() == 'ORDER'}" href="#"
                        th:href="'javascript:cancel('+${item.id}+')'"
